<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>org.testosterone4j</groupId>
	<artifactId>org.testosterone4j.parent</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<packaging>pom</packaging>
	<name>org.testosterone4j.parent</name>
	<description>This is the Testosterone4J parent project</description>

	<modules>


		<module>../org.testosterone4j.tdsl</module>
		<!-- <module>../org.testosterone4j.tdsl.tests</module> -->
		<module>../org.testosterone4j.base</module>
		<module>../org.testosterone4j.runtime.feature</module>
		<module>../org.testosterone4j.sdk.feature</module>
		<module>../org.testosterone4j.tdsl.ui</module>
		<module>../org.testosterone4j.update-site</module>

		<module>../org.testosterone4j.help</module>
		<module>../org.testosterone4j.reflections</module>
	</modules>

	<properties>
		<tycho.version>0.17.0</tycho.version>
		<xtext-version>2.5.4</xtext-version>
		<uitest.vmparams>-Dorg.eclipse.swtbot.search.timeout=30000 -Xmx1024m -XX:MaxPermSize=384m</uitest.vmparams>

		<license.licenseName>mpl</license.licenseName>
		<license.licenseResolver>${project.baseUri}/../org.testosterone4j.parent/src/license</license.licenseResolver>
		<license.inceptionYear>2015</license.inceptionYear>
		<license.organizationName>Axel Ruder</license.organizationName>
	</properties>

	<repositories>
		<repository>
			<id>kepler</id>
			<layout>p2</layout>
			<url>http://download.eclipse.org/releases/kepler</url>
		</repository>
		<repository>
			<id>swt-bot</id>
			<layout>p2</layout>
			<url>http://download.eclipse.org/technology/swtbot/releases/latest/</url>
		</repository>
		<repository>
			<id>Eclipse-Updates</id>
			<layout>p2</layout>
			<url>http://download.eclipse.org/eclipse/updates/4.3</url>
		</repository>
		<repository>
			<id>Itemis</id>
			<layout>p2</layout>
			<url>http://download.itemis.com/updates</url>
		</repository>
	</repositories>

	<pluginRepositories>
		<!-- Repository to resolve fornax-oaw-m2-plugin -->
		<pluginRepository>
			<id>fornax.plugin.repository</id>
			<name>Fornax Plugin Repository</name>
			<url>http://www.fornax-platform.org/m2/repository</url>
		</pluginRepository>
		<!-- Repository to resolve xtend-maven-plugin -->
		<pluginRepository>
			<id>xtend</id>
			<url>http://build.eclipse.org/common/xtend/maven/</url>
		</pluginRepository>
	</pluginRepositories>

	<!-- <repositories> <repository> <id>bne3.target</id> <layout>p2</layout> 
		<url>http://libne3ci01.bmwgroup.net:11000/eclipse/com.bmw.bne3.target-3.0.4/</url> 
		</repository> <repository> <id>xt.mdt</id> <layout>p2</layout> <url>http://libne3ci01.bmwgroup.net:11000/eclipse/org.testosterone4j.update-site-1.0.0/</url> 
		</repository> </repositories> -->

	<build>
		<defaultGoal>install</defaultGoal>
		<plugins>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-maven-plugin</artifactId>
				<extensions>true</extensions>
			</plugin>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>target-platform-configuration</artifactId>
				<configuration>
					<pomDependencies>consider</pomDependencies>
					<environments>
						<!-- <environment> -->
						<!-- <os>win32</os> -->
						<!-- <ws>win32</ws> -->
						<!-- <arch>x86_64</arch> -->
						<!-- </environment> -->
						<!-- <environment> -->
						<!-- <os>win32</os> -->
						<!-- <ws>win32</ws> -->
						<!-- <arch>x86</arch> -->
						<!-- </environment> -->
						<!-- <environment> -->
						<!-- <os>macosx</os> -->
						<!-- <ws>cocoa</ws> -->
						<!-- <arch>x86_64</arch> -->
						<!-- </environment> -->
						<environment>
							<os>linux</os>
							<ws>gtk</ws>
							<arch>x86_64</arch>
						</environment>
					</environments>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-surefire-plugin</artifactId>
				<configuration>
					<useUIHarness>true</useUIHarness>
					<useUIThread>true</useUIThread>
					<product>org.eclipse.platform.ide</product>
					<argLine>${ui.test.vmargs}</argLine>
					<application>org.eclipse.ui.ide.workbench</application>
					<dependencies>
						<dependency>
							<type>p2-installable-unit</type>
							<artifactId>org.eclipse.pde.feature.group</artifactId>
							<version>${platform-version}</version>
						</dependency>
						<dependency>
							<type>p2-installable-unit</type>
							<artifactId>org.eclipse.xtext.sdk.feature.group</artifactId>
							<version>${xtext-version}</version>
						</dependency>
					</dependencies>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-clean-plugin</artifactId>
				<configuration>
					<filesets>
						<fileset>
							<directory>${basedir}/xtend-gen</directory>
							<includes>
								<include>**</include>
							</includes>
						</fileset>
						<fileset>
							<directory>${basedir}/test-gen</directory>
							<includes>
								<include>**</include>
							</includes>
						</fileset>
					</filesets>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>build-helper-maven-plugin</artifactId>
				<executions>
					<execution>
						<id>add-source</id>
						<phase>generate-sources</phase>
						<goals>
							<goal>add-source</goal>
						</goals>
						<configuration>
							<sources>
								<source>src-gen</source>
								<source>xtend-gen</source>
							</sources>
						</configuration>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>license-maven-plugin</artifactId>
				<version>1.8</version>
				<executions>
					<execution>
						<id>first</id>
						<goals>
							<goal>update-file-header</goal>
						</goals>
						<phase>process-sources</phase>
					</execution>
				</executions>
			</plugin>
		</plugins>

		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-resources-plugin</artifactId>
					<version>2.6</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-clean-plugin</artifactId>
					<version>2.5</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-dependency-plugin</artifactId>
					<version>2.5.1</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-assembly-plugin</artifactId>
					<version>2.3</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-jar-plugin</artifactId>
					<version>2.4</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-shade-plugin</artifactId>
					<version>2.0</version>
				</plugin>
				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>build-helper-maven-plugin</artifactId>
					<version>1.7</version>
				</plugin>
				<plugin>
					<groupId>org.eclipse.tycho</groupId>
					<artifactId>tycho-maven-plugin</artifactId>
					<version>${tycho.version}</version>
				</plugin>
				<plugin>
					<groupId>org.eclipse.tycho</groupId>
					<artifactId>tycho-compiler-plugin</artifactId>
					<version>${tycho.version}</version>
					<configuration>
						<meminitial>128m</meminitial>
						<maxmem>1g</maxmem>
						<source>6.0</source>
						<target>6.0</target>
						<verbose>true</verbose>
						<excludeResources>
							<excludeResource>**/*.xtend</excludeResource>
						</excludeResources>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.eclipse.tycho</groupId>
					<artifactId>target-platform-configuration</artifactId>
					<version>${tycho.version}</version>
				</plugin>
				<plugin>
					<groupId>org.eclipse.tycho</groupId>
					<artifactId>tycho-surefire-plugin</artifactId>
					<version>${tycho.version}</version>
				</plugin>
				<plugin>
					<groupId>org.fornax.toolsupport</groupId>
					<artifactId>fornax-oaw-m2-plugin</artifactId>
					<version>3.4.0</version>
					<configuration>
						<workflowEngine>mwe2</workflowEngine>
						<jvmSettings>
							<jvmArgs>
								<jvmArg>-Xmx1024m</jvmArg>
							</jvmArgs>
						</jvmSettings>
					</configuration>
					<executions>
						<execution>
							<phase>generate-sources</phase>
							<goals>
								<goal>run-workflow</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<groupId>org.eclipse.xtend</groupId>
					<artifactId>xtend-maven-plugin</artifactId>
					<version>${xtext-version}</version>
					<configuration>
						<encoding>UTF-8</encoding>
					</configuration>
					<executions>
						<execution>
							<goals>
								<goal>compile</goal>
							</goals>
							<configuration>
								<!-- need to prefix by basedir to generate to currently built module -->
								<outputDirectory>${basedir}/xtend-gen</outputDirectory>
							</configuration>
						</execution>
					</executions>
					<dependencies>
						<!-- these dependencies are contributed in Eclipse by the "Xtend Library" 
							classpath container -->
						<dependency>
							<groupId>org.eclipse.xtend</groupId>
							<artifactId>org.eclipse.xtend.lib</artifactId>
							<version>${xtext-version}</version>
							<type>pom</type>
						</dependency>
					</dependencies>
				</plugin>
				<!--This plugin's configuration is used to store Eclipse m2e settings 
					only. It has no influence on the Maven build itself. -->
				<plugin>
					<groupId>org.eclipse.m2e</groupId>
					<artifactId>lifecycle-mapping</artifactId>
					<version>1.0.0</version>
					<configuration>
						<lifecycleMappingMetadata>
							<pluginExecutions>
								<pluginExecution>
									<pluginExecutionFilter>
										<groupId>
											org.fornax.toolsupport
										</groupId>
										<artifactId>
											fornax-oaw-m2-plugin
										</artifactId>
										<versionRange>
											[3.4.0,)
										</versionRange>
										<goals>
											<goal>run-workflow</goal>
										</goals>
									</pluginExecutionFilter>
									<action>
										<ignore></ignore>
									</action>
								</pluginExecution>
								<pluginExecution>
									<pluginExecutionFilter>
										<groupId>
											org.codehaus.mojo
										</groupId>
										<artifactId>
											build-helper-maven-plugin
										</artifactId>
										<versionRange>
											[1.7,)
										</versionRange>
										<goals>
											<goal>add-source</goal>
										</goals>
									</pluginExecutionFilter>
									<action>
										<ignore></ignore>
									</action>
								</pluginExecution>
							</pluginExecutions>
						</lifecycleMappingMetadata>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>

	</build>

	<profiles>
		<profile>
			<id>macosx</id>
			<activation>
				<os>
					<name>mac os x</name>
					<family>mac</family>
				</os>
			</activation>
			<properties>
				<ui.test.vmargs>${uitest.vmparams} -XstartOnFirstThread</ui.test.vmargs>
			</properties>
		</profile>
		<profile>
			<id>other-os</id>
			<activation>
				<os>
					<name>not-mac</name>
					<family>!mac</family>
				</os>
			</activation>
			<properties>
				<ui.test.vmargs>${test.vmparams} ${uitest.vmparams}</ui.test.vmargs>
			</properties>
		</profile>


		<profile>
			<id>xDocFromXT</id>

			<repositories>
				<repository>
					<id>xDoc</id>
					<layout>p2</layout>
					<url>http://xt.msg.de/taskdev/updates/xDoc</url>
				</repository>
			</repositories>
		</profile>
		<profile>
			<id>xDocFromTestosterone4j</id>

			<repositories>
				<repository>
					<id>xDoc</id>
					<layout>p2</layout>
					<url>http://testosterone4j.org/updates/xDoc/latest</url>
				</repository>
			</repositories>
		</profile>
	</profiles>
</project>
